# langchain_updated

./: .env  README.md  pyproject.toml  requirements.txt
langchain_updated/: 1-langchain_Intro.ipynb  2-model_integration.ipynb  3-tools.ipynb  4-message_types.ipynb  5-structured_output.ipynb
